<resources>
    <string name="app_name">Instagram App</string>

    <string name="logoImage">Logo</string>
    <string name="iconImage">Icon</string>
    <string name="loginButton">Log In</string>
    <string name="registerButton">Register</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginUser">Already a User? Log In</string>
    <string name="registerUser">New To Instagram? Register Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="search">Search...</string>
    <string name="full_name">Full Name</string>
    <string name="follow">Follow</string>
    <string name="log_out">Log Out</string>
    <string name="ntg">ntg</string>
</resources>
