<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageProfile"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageProfile"
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:maxLines="1"
            android:id="@+id/usernameField"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:maxLines="1"
            android:id="@+id/nameField"/>


    </LinearLayout>
    <Button
        android:id="@+id/followButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/follow"
        android:layout_centerVertical="true"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:typeface="serif"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_background"
        android:visibility="gone"/>


</RelativeLayout>